@@ -80,8 +80,6 @@ override_dh_install-arch:
 	# Install the pkg-config file
 	mkdir -p debian/libsane-dev/usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig/
 	cp tools/sane-backends.pc debian/libsane-dev/usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig/
-	mkdir -p $(CURDIR)/debian/sane-utils/usr/share/man/man5/
-	cp $(CURDIR)/doc/sane-umax_pp.man $(CURDIR)/debian/sane-utils/usr/share/man/man5/umax_pp.5
 
 override_dh_install-indep:
 	dh_install
@@ -89,6 +87,14 @@ override_dh_install-indep:
 	mkdir -p $(CURDIR)/debian/libsane-common/usr/share/hal/fdi/preprobe/10osvendor
 	$(CURDIR)/tools/sane-desc -s $(CURDIR)/doc/descriptions -m hal-new > \
 	$(CURDIR)/debian/libsane-common/usr/share/hal/fdi/preprobe/10osvendor/20-libsane.fdi
+
+override_dh_installman-indep:
+	dh_installman
+	$(RM) $(CURDIR)/debian/libsane-common/usr/share/man/man1/gamma4scanimage.1
+	$(RM) $(CURDIR)/debian/libsane-common/usr/share/man/man1/sane-find-scanner.1
+	$(RM) $(CURDIR)/debian/libsane-common/usr/share/man/man1/scanimage.1
+	$(RM) $(CURDIR)/debian/libsane-common/usr/share/man/man5/sane-umax_pp.5
+	$(RM) $(CURDIR)/debian/libsane-common/usr/share/man/man8/saned.8
 
 override_dh_installdocs-arch:
 	dh_installdocs
