@@ -3,10 +3,6 @@ usr/bin/gamma4scanimage
 usr/bin/sane-find-scanner
 usr/bin/scanimage
 usr/sbin/saned
-usr/share/man/man1/gamma4scanimage.1
-usr/share/man/man1/sane-find-scanner.1
-usr/share/man/man1/scanimage.1
-usr/share/man/man8/saned.8
 tools/umax_pp usr/bin
 debian/saned.socket lib/systemd/system
 debian/saned@.service lib/systemd/system
