@@ -1,0 +1,5 @@
+doc/gamma4scanimage.man
+doc/sane-find-scanner.man
+doc/scanimage.man
+doc/saned.man
+doc/sane-umax_pp.man
